Fix button-group spacing
The issue was caused by b920697 and fixed in many places in c498d79. We
missed this one though.

--- a/src/s1/s1/static/stylesheets/scss/components/_button_theme.scss
+++ b/src/s1/s1/static/stylesheets/scss/components/_button_theme.scss
@@ -129,6 +129,7 @@ cta button variant
 .button-group {
     @include clearfix;
     display: inline-block;
+    vertical-align: middle;
 
     .button {
         border-radius: 0;
